# rag_eval

./: Hybrid_rerank_rag_app.py  README.md  hybrid_rag_app.py  hybrid_rag_create_vector_db.py  lightrag_gemini_app.py  lightrag_gemini_app_back.py  pyproject.toml  qa.csv  ragas_eval.py  vanilla_llm_app.py  vanilla_rag_app.py  vanilla_rag_create_vector_db.py  vanilla_rag_eval.py  vanilla_rag_pipeline.py
.cursor/rules/: coding_standards.mdc  development_workflow.mdc  project_overview.mdc
data/: kv_store_doc_status.json
hybrid_rag_db/: bm25_data.json  chroma.sqlite3
