[tool.poetry]
name = "rag-eval"
version = "0.1.0"
description = "RAG評検証"
authors = ["kohsaku Nishida <kohsaku.nishida@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
google-genai = "^1.13.0"
langchain-google-genai = "^2.1.4"
python-dotenv = "^1.1.0"
ragas = "^0.2.15"
langchain-chroma = "^0.2.3"
protobuf = "3.20.3"
setuptools = "^80.3.1"
pypdf = "^5.4.0"
cryptography = "^44.0.3"
langchain-community = "^0.3.23"
tenacity = "^9.1.2"
lightrag-hku = {git = "https://github.com/HKUDS/LightRAG.git"}
sentence-transformers = "^2.5.1"
wcwidth = "^0.2.13"
rank-bm25 = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
